API Invito e DatiSensibili
modificati gli id di alcune classi. Aggiornati test.